--- a/saba/Cargo.toml
+++ b/saba/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 default-run = "saba"
 
 [features]
-default = ["wasabi]
-wasabi = ["dep:net_wasabi", "dep:noli]
+default = ["wasabi"]
+wasabi = ["dep:net_wasabi", "dep:noli"]
 
 [[bin]]
 name = "saba"
@@ -17,6 +17,6 @@ path = "src/main.rs"
 required-features = ["wasabi"]
 
 [dependencies]
-saba_core = { path = "../saba_core" }
+saba_core = { path = "./saba_core" }
 net_wasabi = { path = "./net/wasabi", optional = true }
 noli = { git = "https://github.com/hikalium/wasabi.git" , branch = "for_saba" , optional = true }
